src/test/resources/shell/shellSemanticErr/multiple/funcMess.wacc
# a complete mess of function definition and use

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

  int f(bool b) is
    x = -1 ;
    return "done"
  end
  
  int x = 5 ;
  int y = call f(x) ;
  println y ;
  println x
  

